opam-version: "2.0"
name: "photo_archiver"
version: "0.1"
synopsis: "Archives photos from Google Photos"
maintainer: "Omer Strumpf <omstrumpf@gmail.com>"
authors: "Omer Strumpf <omstrumpf@gmail.com>"
license: "MIT"
depends: [
    "ocaml"
    "core"
    "async"
    "cohttp"
    "cohttp-async"
    "async_ssl"
    "uri"
    "yojson"
    "ppx_jane"
    "ppx_yojson_conv"
    ]
build: ["dune" "build" "-p" name "-j" jobs]