opam-version: "2.0"
name: "photo_archiver"
version: "0.1"
synopsis: "Archives photos from Google Photos"
maintainer: "Omer Strumpf <omstrumpf@gmail.com>"
authors: "Omer Strumpf <omstrumpf@gmail.com>"
license: "MIT"
depends: [
    "async"
    "async_ssl"
    "cohttp"
    "cohttp-async"
    "core"
    "ocaml"
    "ppx_jane"
    "ppx_yojson_conv"
    "sqlite3"
    "uri"
    "yojson"
    ]
build: ["dune" "build" "-p" name "-j" jobs]