opam-version: "2.0"
name: "photo_archiver"
version: "0.1"
synopsis: "Archives photos from Google Photos"
maintainer: "Omer Strumpf <me@omer.dev>"
authors: "Omer Strumpf <me@omer.dev>"
license: "MIT"
homepage: "https://github.com/omstrumpf/photo_archiver"
bug-reports: "bugs@omer.dev"
depends: [
    "async"
    "async_ssl"
    "cohttp"
    "cohttp-async"
    "core"
    "core_unix"
    "ocaml"
    "ppx_jane"
    "ppx_yojson_conv"
    "sqlite3"
    "uri"
    "yojson"
    ]
build: ["dune" "build" "-p" name "-j" jobs]
